# VoidDrift

./: .gitignore  .publish.env.example  .replit  AGENT_CONTRACT.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REPOSITORY_INVENTORY.md  TUTORIAL_POPUP_VERIFICATION.md  bake_android.ps1  bake_wasm.ps1  build_android.ps1  build_desktop.ps1  build_wasm.ps1  capture_gate_evidence.ps1  index.html  package-lock.json  package.json  publish.ps1  replit.md  run.ps1  setup_env.ps1  verify.ps1
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: README.md  deploy-telemetry.yml  deploy-wasm.yml
android/: build.gradle  gradle.properties  gradlew.bat  settings.gradle
android/app/: CMakeLists.txt  build.gradle  dummy.cpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rfditservices/voidrift/: MainActivity.java
android/gradle/: libs.versions.toml
assets/: balance.toml  visual.toml
assets/content/: echo.yaml  logs.yaml  objectives.yaml  requests.yaml  tutorial.yaml
assets/shaders/: starfield.wgsl
context/: last_error.txt
docs/: ADR_001_PresentMode_Fifo.md  ADR_002_Mesh2d_Primitives.md  AGENT_CONTRACT.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPER.md  DEVELOPMENT_PIPELINE.md  GDD.md  GDD_v1_ARCHIVED.md  GDD_v2.md  NARRATIVE_JUSTIFICATION.md  PHASE1_POWER_DELETION_DIRECTIVE.md  PHASE1b_UNIFIED_SHIP_QUEUE_DIRECTIVE.md  README.md  VOIDRIFT_HUD_REFACTOR_DIRECTIVE.md  VOIDRIFT_REFACTOR_ANALYSIS.md  VoidDrift_Future_Design_Notes.md  Voidrift_AdaptiveUI_Directive.md  Voidrift_BottomDrawer_UI_Directive.md  Voidrift_Phase_5_Directive.md  Voidrift_Phase_8b_Directive.md  Voidrift_ProcessingQueue_Directive.md  Voidrift_SDD_v0_1.docx  Voidrift_Signal_Narrative_Design.md  Voidrift_Station_Architecture.md  Voidrift_Station_PhaseB_Directive.md  Voidrift_Visual_Polish_Directive.md  WASM_BUILD.md  WASM_ITCH_SIZING.md  WINDSURF.md  codebase-audit-2026-05-10.md  narrative_canon.md  roadmap.md
docs/adr/: 003-egui-ui.md  ADR-001-present-mode-fifo.md  ADR-002-mesh2d-world-primitives.md  ADR-003-bevy-egui-hud.md  ADR-004-bevy-015-pinned.md  ADR-005-autonomous-dedicated-systems.md  ADR-006-module-structure.md  ADR-007-system-partitioning.md  ADR-008-universal-disjointness.md  ADR-009-tutorial-trigger-pattern.md  ADR-010-narrative-scope.md  ADR-011-event-bus-srp.md  ADR-012-no-sprites-procedural-math-visual-language.md  ADR-013-bevy-mesh-world-entities-egui-painter-ui.md  ADR-014-opt-in-anonymous-telemetry-fastapi-sqlite.md  ADR-015-canvas-css-wasm-iframe-fullscreen.md  ADR-016-layer-1-2-3-engine-game-presentation-architecture.md  ADR-017-4-99-premium-pricing-high-intent-filtering.md  ADR-018-cargo-bay-chain-layout-miniature-pipeline-view.md  ADR-019-scout-orbit-paint-dispatch.md  ADR-019-ui-component-hierarchy-stateless.md  ADR-020-desktop-config-hot-reload.md  ADR-020-drone-spawn-invariant.md  ADR-021-architecture-b-only-drone-fsm.md
docs/analysis/: architecture_review.md  codebase_analysis_2026-05-17.md
docs/archive/: VoidDrift_Phase2_UI_Refactor_Requests_Directive.md
docs/design/: ECONOMY.md  STARGATE.md  UI_VISION.md  VISION.md
docs/directives/: PHASE1c_ASTEROID_LIFECYCLE_DIRECTIVE.md  PHASE5_CODEBASE_REFACTOR_DIRECTIVE.md  Phase_0_Directive.md  SDD_v0.2_corrections.md  VOIDRIFT_DOCS_UPDATE_FOCUSED.md  VOIDRIFT_REFACTOR_ANALYSIS_DIRECTIVE.md  VoidDrift_Dev_Branch_Infrastructure_Directive.md  VoidDrift_Documentation_Update_Directive.md  VoidDrift_Phase2_BugFix_Sprint_Directive.md  VoidDrift_Phase2_Closeout_Directive.md  VoidDrift_Phase2_UI_Refactor_Requests_Directive_v2.md  VoidDrift_Phase3a_PreRefactor_Cleanup_Directive.md  VoidDrift_Phase3b_EventBus_Refactor_Directive.md  VoidDrift_Phase3c_EventBusGaps_SpawnDedup_Directive.md  VoidDrift_Phase3d_NarrativeEntanglement_SystemBundling_Directive.md  VoidDrift_Phase4a_Tutorial_Directive.md  VoidDrift_Sprint5_Visual_Amendment.md  VoidDrift_Sprint5_Visual_Amendment_2.md  VoidDrift_Sprint5_Visual_Amendment_3.md  VoidDrift_Sprint5_Visual_Amendment_4.md  VoidDrift_Sprint5_Visual_Overhaul_Directive.md  VoidDrift_Sprint6_Space_Entity_Visuals_Directive.md  VoidDrift_Sprint7_Bevy_Mesh_Generation_Directive.md  VoidDrift_Sprint8_Kickoff_Directive.md  VoidDrift_Tutorial_Refinement_Directive.md  VoidDrift_WASM_Polish_Sprint_Directive.md  Voidrift_Documentation_Refactor_Directive.md  Voidrift_Phase_6_Directive.md  Voidrift_QuestTracker_Directive.md  Voidrift_SDD_v0_2_Addendum.md  Voidrift_UI_Overhaul_Directive.md
docs/phases/: phase-07-signal-narrative.md  phase-08-processing-queues.md  phase-09-world-expansion.md  phase-10-tutorial-ux.md  phase-economy-redesign-planned.md  phase_00_android_spike.md  phase_01_world_scaffold.md  phase_02_map_navigation.md  phase_03_mining_system.md  phase_04_station_refinery.md  phase_05_repair_slice_complete.md  phase_06_ai_core_drone.md  phase_module_refactor.md  phase_visual_polish.md
docs/state/: current.md
pkg/assets/: .gitkeep
rfd-telemetry/: .env.example  main.py  requirements.txt  telemetry.db-shm  telemetry.db-wal
scripts/: OBS_SETUP.md  gh_tools.ps1  local_itch_preview.html  obs_scene.json  record_demo.ps1  serve_wasm.py  shot_guide.html  trim_demo.ps1
src/: components.rs  constants.rs  lib.rs
src/components/: events.rs  game_state.rs  markers.rs  mod.rs  queries.rs  resources.rs  ui_state.rs  utilities.rs
src/config/: balance.rs  content.rs  mod.rs  visual.rs
src/drone/: fsm.rs  mod.rs  scout_dispatch.rs
src/economy/: cargo.rs  mod.rs
src/scenes/: main_menu.rs  menu_starfield.rs  restore.rs  save_overlay.rs
src/systems/: asteroid_input.rs  asteroid_lifecycle.rs  auto_process.rs  autonomous.rs  autopilot.rs  bevy_ui_signal.rs  debug_log.rs  drone_queue.rs  economy.rs  hud.rs  map.rs  mining.rs  mod.rs  narrative.rs  opening_sequence.rs  quest.rs  save.rs  setup.rs  signal.rs  starfield.rs  station_tabs.rs  tutorial.rs  ui.rs  viewport.rs  visuals.rs
src/tests/: dispatch.rs  economy.rs  fleet.rs  fsm.rs  invariants.rs  mod.rs
src/ui_kit/: mod.rs  (+2 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+84 files in other folders)
