[package]
name = "voidrift"
version = "0.1.0"
edition = "2021"

# ----------------------------------------------------------------------------
# Lib crate only — cdylib required for Android .so output.
# No [[bin]] target at Phase 0. Desktop runs via `cargo run` against lib.
# ----------------------------------------------------------------------------
[lib]
name = "voidrift"
crate-type = ["cdylib", "rlib"]

# ----------------------------------------------------------------------------
# Bevy pinned at 0.15 — confirmed by OQ-001 research (April 2026).
# DO NOT upgrade without a new directive. Bevy 0.18 is current but 0.15 has
# the most complete Android/GameActivity community documentation.
#
# bevy_android is NOT listed here — it is bundled inside the bevy crate.
# Adding it separately would be incorrect (confirmed by OQ-001 research).
# ----------------------------------------------------------------------------
[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_state",
    "bevy_asset",
    "bevy_core_pipeline",
    "android_shared_stdcxx",
    "android-game-activity",
    "x11",
] }
bevy_log = "0.15.3"

# ----------------------------------------------------------------------------
# serde, rand, etc. are deferred to Phase 1+.
# Do not add them here — they are out of Phase 0 scope.
# ----------------------------------------------------------------------------

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
