[package]
name = "voidrift"
version = "0.1.0"
edition = "2021"

# ----------------------------------------------------------------------------
# Lib crate only — cdylib required for Android .so output.
# No [[bin]] target at Phase 0. Desktop runs via `cargo run` against lib.
# ----------------------------------------------------------------------------
[lib]
name = "voidrift"
crate-type = ["cdylib", "rlib"]

# ----------------------------------------------------------------------------
# Bevy pinned at 0.15 — confirmed by OQ-001 research (April 2026).
# DO NOT upgrade without a new directive. Bevy 0.18 is current but 0.15 has
# the most complete Android/GameActivity community documentation.
#
# bevy_android is NOT listed here — it is bundled inside the bevy crate.
# Adding it separately would be incorrect (confirmed by OQ-001 research).
# ----------------------------------------------------------------------------
[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_picking",
    "bevy_state",
    "bevy_asset",
    "bevy_core_pipeline",
] }
bevy_egui = "0.33.0"
bevy_kira_audio = "0.21.0"
bevy_log = "0.15.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# ----------------------------------------------------------------------------
# Platform-specific dependencies
# ----------------------------------------------------------------------------

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Android-specific Bevy features
[target.'cfg(target_os = "android")'.dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "android_shared_stdcxx",
    "android-game-activity",
] }

# WASM-specific persistence and WebGL support
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
bevy = { version = "0.15.3", default-features = false, features = [
    "webgl2",
    "webgpu",
] }

# ----------------------------------------------------------------------------
# serde, rand, etc. are deferred to Phase 1+.
# Do not add them here — they are out of Phase 0 scope.
# ----------------------------------------------------------------------------

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
